Created a h1 element with a text node of Binge Roulette. Created a form element with a label and input

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Binge Roulette</title>
 </head>
 <body>
+  <header>
+    <h1>Binge Roulette</h1>
+  </header>
 
+  <form action="">
+    <label for="title">Movie Title: </label>
+    <input type="text" id="title" name="title">
+  </form>
 </body>
 </html>
