--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@
     </form>
   </main>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
