--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
             <i class="fas fa-film"></i>
           </span>
         </div>
-        <select class="form-control" id="exampleFormControlSelect1">
-          <option value="" selected="selected">--Please choose a genre--</option>
-          <option value="Comedy">Comedy</option>
-          <!-- <option value="">Adventure</option>
-          <option value="">Comedy</option>
-          <option value="">Crime</option>
-          <option value="">Drama</option>
-          <option value="">Romance</option>
-          <option value="">Thriller</option>
-          <option value="">Horror</option>
-          <option value="">Science Fiction</option> -->
+        <select class="form-control" id="genreOptions">
+          <option value="None" selected="selected">--Please choose a genre--</option>
+          <option value="35" id="comedy">Comedy</option>
+          <!-- <option value="28">Action</option> -->
+          <!-- <option value="">Comedy</option> -->
+          <!-- <option value="">Crime</option> -->
+          <!-- <option value="">Drama</option> -->
+          <!-- <option value="">Romance</option> -->
+          <!-- <option value="">Thriller</option> -->
+          <!-- <option value="">Horror</option> -->
+          <!-- <option value="">Science Fiction</option> -->
         </select>
       </div>
       <div class="text-center">
@@ -41,7 +41,6 @@
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
-  <script src="components/movieInfo.js"></script>
   <script src="config.js"></script>
   <script src="main.js"></script>
 </body>
