--- a/index.html
+++ b/index.html
@@ -23,22 +23,44 @@
         </div>
         <select class="form-control" id="genreOptions">
           <option value="None" selected="selected">--Please choose a genre--</option>
-          <option value="35" id="comedy">Comedy</option>
-          <!-- <option value="28">Action</option> -->
-          <!-- <option value="">Comedy</option> -->
-          <!-- <option value="">Crime</option> -->
-          <!-- <option value="">Drama</option> -->
-          <!-- <option value="">Romance</option> -->
-          <!-- <option value="">Thriller</option> -->
-          <!-- <option value="">Horror</option> -->
-          <!-- <option value="">Science Fiction</option> -->
+          <option value="28">Action</option>
+          <option value="12">Adventure</option>
+          <option value="16">Animation</option>
+          <option value="35">Comdey</option>
+          <option value="80">Crime</option>
+          <option value="99">Documentary</option>
+          <option value="18">Drama</option>
+          <option value="10751">Family</option>
+          <option value="14">Fantasy</option>
+          <option value="36">History</option>
+          <option value="27">Horror</option>
+          <option value="10402">Music</option>
+          <option value="9648">Mystery</option>
+          <option value="10749">Romance</option>
+          <option value="878">Science Fiction</option>
+          <option value="10770">TV Movie</option>
+          <option value="53">Thriller</option>
+          <option value="10752">War</option>
+          <option value="37">Western</option>
         </select>
       </div>
       <div class="text-center">
         <button type="submit" class="btn btn-success">Submit</button>
       </div>
     </form>
+
   </main>
+
+  <section class="container">
+    <div class="row justify-content-center movie-info-row">
+      <aside class="col-3">
+        <!-- Movie poster goes here -->
+      </aside>
+      <article class="col-6">
+        <!-- Movie info goes here -->
+      </article>
+    </div>
+  </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
   <script src="config.js"></script>
