Created a function that gets the selected movie ID and enters it into the the url api for searching IDs. That result then returns the an object with movie trailers. I then take the key in that object and create an iFrame. with the youtube url and key from the object as a the src.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <!-- <option value="28">Action</option> -->
           <!-- <option value="12">Adventure</option> -->
           <!-- <option value="16">Animation</option> -->
-          <!-- <option value="35">Comdey</option> -->
+          <option value="35">Comdey</option>
           <!-- <option value="80">Crime</option> -->
           <!-- <option value="99">Documentary</option> -->
           <!-- <option value="18">Drama</option> -->
