Created function that checks if option element value is 'None' it disables the submit button. If the option value is false it enables the submit button.

--- a/index.html
+++ b/index.html
@@ -53,12 +53,8 @@
 
   <section class="container">
     <div class="row justify-content-center movie-info-row">
-      <aside class="col-4">
-        <!-- Movie poster goes here -->
-      </aside>
-      <article class="col-6">
-        <!-- Movie info goes here -->
-      </article>
+      <aside class="col-4" id="movie-poster"></aside>
+      <article class="col-6" id="all-movie-info"></article>
     </div>
   </section>
 
