Change button element text node to 'SPIN'

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </select>
       </div>
       <div class="text-center">
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-success">SPIN</button>
       </div>
     </form>
 
