--- a/index.html
+++ b/index.html
@@ -44,11 +44,20 @@
           <!-- <option value="37">Western</option> -->
         </select>
       </div>
+
+      <div class="form-check form-check-inline check-boxes-container mb-3">
+        <div class="check-boxes">
+          <input class="form-check-input" type="checkbox" value="" id="Movie">
+          <label class="form-check-input" for="Movie">Movie</label>
+          <input class="form-check-input" type="checkbox" value="" id="TV Show">
+          <label class="form-check-input" for="Movie">TV Show</label>
+        </div>
+      </div>
+
       <div class="text-center">
         <button type="submit" class="btn btn-success">SPIN</button>
       </div>
     </form>
-
   </main>
 
   <section class="container">
